pkg/provider/kubernetes/ingress/fixtures/with_native_service_lb_disabled.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing

spec:
  rules:
    - host: traefik.tchouk
      http:
        paths:
          - path: /bar
            backend:
              service:
                name: service1
                port:
                  number: 8080
            pathType: Prefix

---
kind: Service
apiVersion: v1
metadata:
  name: native-svc
  namespace: testing
  annotations:
    traefik.ingress.kubernetes.io/service.nativelb: "false"

spec:
  ports:
    - port: 8080
  clusterIP: 10.0.0.1
  type: ClusterIP
  externalName: traefik.wtf
